--- a/task1.html
+++ b/task1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>task1</title>
-    <link rel="task2" href="/task1/task2.css">
+    <link rel="stylesheet" href="task2.css">
 </head>
 <body>
     <h1>başlangıç</h1>
