--- a/task1.html
+++ b/task1.html
@@ -3,6 +3,9 @@
 <head>
     <title>task1</title>
     <link rel="stylesheet" href="task2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>başlangıç</h1>
