--- a/task1.html
+++ b/task1.html
@@ -16,7 +16,7 @@
 <body>
     <h1>başlangıç</h1>
     <p>Bu daha uzun bir test paragrafı.</p>
-    <img src="Group_33134.png" alt="mountain" height="769" width="574">
+    <img src="banner.png" alt="mountain" height="769" width="574">
     <button type="button">tuş.</button>
 </body>
 </html>
