--- a/task1.html
+++ b/task1.html
@@ -17,6 +17,6 @@
     <h1>başlangıç</h1>
     <p>Bu daha uzun bir test paragrafı.</p>
     <img src="banner.png" alt="mountain" height="769" width="574">
-    <button type="button">tuş.</button>
+    <button type="button">bu bir test tuşu.</button>
 </body>
 </html>
