--- a/task1.html
+++ b/task1.html
@@ -11,12 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>başlangıç</h1>
     <p>Bu daha uzun bir test paragrafı.</p>
-    <img src="banner.png" alt="mountain" height="769" width="574">
+    <img src="banner.png" alt="mountain" height="762,89" width="699,19">
     <button type="button">bu bir test tuşu.</button>
 </body>
 </html>
