--- a/task1.html
+++ b/task1.html
@@ -14,9 +14,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>başlangıç</h1>
-    <p>Bu daha uzun bir test paragrafı.</p>
-    <img src="banner.png" alt="mountain" height="762,89" width="699,19">
-    <button type="button">bu bir test tuşu.</button>
+    <h1 id="baslik1">HYDROLOGY PROCESS</h1>
+    <p id="yazi1">
+        <span>Understanding the Hydrological Cycle:</span> <span> Types and Processes Occurrence</span>
+    </p>
+    <button class="tus1" type=button">SEE OTHER TOPIC</button>
+    <div class="fixed">
+        <img src="Group 33134.png" alt="mountain" height="762,89" width="699,19">
+    </div>
 </body>
 </html>
