--- a/task1.html
+++ b/task1.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>task1</title>
-    <link rel="stylesheet" href="task2.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
+  <title>task1</title>
+  <link rel="stylesheet" href="task2.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="baslik1">HYDROLOGY PROCESS</h1>
-    <p id="yazi1">
-        <span>Understanding the Hydrological Cycle:</span> <span> Types and Processes Occurrence</span>
-    </p>
-    <button class="tus1" type=button">SEE OTHER TOPIC</button>
-    <div class="fixed">
-        <img src="Group 33134.png" alt="mountain" height="762,89" width="699,19">
-    </div>
+  <h1 id="baslik1">HYDROLOGY PROCESS</h1>
+  <p id="yazi1">
+    <span>Understanding the Hydrological Cycle:</span> <span> Types and Processes Occurrence</span>
+  </p>
+  <button id="at" class="tus1" type="button">SEE OTHER TOPIC</button>
+  <div class="fixed">
+    <img src="Group 33134.png" alt="mountain" height="762,89" width="699,19">
+  </div>
 </body>
 </html>
