--- a/task1.html
+++ b/task1.html
@@ -6,21 +6,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
+  <script src="task6.js"></script>
 </head>
 <body>
-  <h1 id="baslik1">HYDROLOGY PROCESS</h1>
-  <p id="yazi1">
+  <div class="basliksag">
+    <h1 class="baslik1">
+    <span>HYDROLOGY</span> <span>PROCESS</span>
+    </h1>
+    <img src="Group 33134.png" alt="mountain" height="762,89" width="699,19">
+   </div>
+  <div class="kutusag">
+   <p class="yazi1">
     <span>Understanding the Hydrological Cycle:</span> <span> Types and Processes Occurrence</span>
   </p>
-  <button id="at" class="tus1" type="button">SEE OTHER TOPIC</button>
-  <div class="fixed">
-    <img src="Group 33134.png" alt="mountain" height="762,89" width="699,19">
-  </div>
+ </div>
+ <button id="at" class="tus1" type="button">SEE OTHER TOPIC</button>
 </body>
 </html>
